--- a/nbs/00_data.ipynb
+++ b/nbs/00_data.ipynb
@@ -15,6 +15,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#default_cls_lvl 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#hide\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
