--- a/nbs/01_learner.ipynb
+++ b/nbs/01_learner.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2044f29a",
+   "id": "70fa0f6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb7885f1",
+   "id": "f2a0bdd8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#default_cls_lvl 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b12d68b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9227f26a",
+   "id": "fed3465a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21946412",
+   "id": "90eb6cbb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92e05920",
+   "id": "516e93b3",
    "metadata": {},
    "source": [
     "# Learner for transformers"
@@ -58,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ecca321",
+   "id": "21999df0",
    "metadata": {},
    "source": [
     "## Parameter groups"
@@ -66,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6b78a49",
+   "id": "358755c5",
    "metadata": {},
    "source": [
     "TODOs:\n",
@@ -77,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f199e7b",
+   "id": "b9fff883",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f8638d3",
+   "id": "73650811",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1afeb4ce",
+   "id": "13a308f9",
    "metadata": {},
    "source": [
     "## TransLearner and utils"
@@ -110,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "972dc8f5",
+   "id": "6dde821a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "317d3de3",
+   "id": "22415c43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1c77894",
+   "id": "87675e6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d43b22a0",
+   "id": "f99ee129",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2333fc39",
+   "id": "baa9b9e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c41464c",
+   "id": "fd0c673e",
    "metadata": {},
    "source": [
     "### Using TransLearner for sequence classification"
@@ -237,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03ad9871",
+   "id": "85785605",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5db7b5ad",
+   "id": "8b6b9177",
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f04e8bac",
+   "id": "86873bf0",
    "metadata": {},
    "source": [
     "## Fin"
@@ -331,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2324965",
+   "id": "d93b9e27",
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "953d02ed",
+   "id": "73078ea3",
    "metadata": {},
    "outputs": [],
    "source": []
