--- a/nbs/10_examples.classification-imdb.ipynb
+++ b/nbs/10_examples.classification-imdb.ipynb
@@ -156,11 +156,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dblock = DataBlock(blocks = [TransformersTextBlock(pretrained_model_name=model_name), CategoryBlock()],\n",
-    "                   get_items=get_text_files,\n",
-    "                   get_x=read_text,\n",
-    "                   get_y=parent_label,\n",
-    "                   splitter=GrandparentSplitter(valid_name='test'))"
+    "dblock = DataBlock(\n",
+    "    blocks = [TransformersTextBlock(pretrained_model_name=model_name),\n",
+    "              CategoryBlock()],\n",
+    "    get_items=get_text_files,\n",
+    "    get_x=read_text,\n",
+    "    get_y=parent_label,\n",
+    "    splitter=GrandparentSplitter(valid_name='test'))"
    ]
   },
   {
@@ -298,6 +300,7 @@
     }
    ],
    "source": [
+    "#hide_output\n",
     "wandb.init(reinit=True, project=\"fasthugs\", entity=\"fastai_community\",\n",
     "           name=WANDB_NAME, group=GROUP, notes=NOTES, tags=TAGS, config=CONFIG);"
    ]
@@ -328,7 +331,7 @@
    ],
    "source": [
     "model = AutoModelForSequenceClassification.from_pretrained(model_name)\n",
-    "learn = TransLearner(dls, model, metrics=accuracy, splitter=default_splitter)"
+    "learn = TransLearner(dls, model, metrics=accuracy)"
    ]
   },
   {
