--- a/nbs/11_examples.mlm-imdb.ipynb
+++ b/nbs/11_examples.mlm-imdb.ipynb
@@ -62,6 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#hide\n",
     "import sys\n",
     "if 'google.colab' in sys.modules:\n",
     "    !pip install -Uqq fastcore sentencepiece\n",
@@ -71,15 +72,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Masked Language Modeling"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from transformers import AutoTokenizer, AutoModelForMaskedLM\n",
-    "#                           DataCollatorForLanguageModeling,\n",
-    "#                           DataCollatorForWholeWordMask)\n",
-    "from datasets import load_dataset, concatenate_datasets, load_metric\n",
+    "from datasets import load_dataset, concatenate_datasets\n",
     "\n",
     "from fastai.text.all import *\n",
     "from fasthugs.learner import TransLearner\n",
@@ -114,7 +120,7 @@
    "source": [
     "## Data preprocessing\n",
     "\n",
-    "In this example notebook we use HuggingFace datasets for preprocessing (as show in example [here]()."
+    "In this example notebook we use HuggingFace datasets for preprocessing (as show in example notebook [here](https://github.com/huggingface/notebooks/blob/master/examples/language_modeling.ipynb))."
    ]
   },
   {
@@ -292,24 +298,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = AutoModelForMaskedLM.from_pretrained(model_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import random"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import random\n",
     "N = len(lm_dataset)\n",
     "idx = list(range(N))\n",
     "random.shuffle(idx)"
@@ -334,15 +323,6 @@
    "source": [
     "dblock = DataBlock(blocks=[TransformersLMBlock(tokenizer=tokenizer)],\n",
     "                   splitter=IndexSplitter(valid_idx))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# dblock.summary(lm_dataset)"
    ]
   },
   {
@@ -449,7 +429,7 @@
    ],
    "source": [
     "b = dls.one_batch()\n",
-    "b"
+    "b[0]['input_ids'], b[0]['labels']"
    ]
   },
   {
@@ -465,6 +445,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "model = AutoModelForMaskedLM.from_pretrained(model_name)\n",
     "learn = TransLearner(dls, model, loss_func=noop, metrics=perplexity)"
    ]
   },
