--- a/nbs/12_examples.glue-benchmark.ipynb
+++ b/nbs/12_examples.glue-benchmark.ipynb
@@ -80,15 +80,8 @@
     "from fastai.callback.wandb import *\n",
     "\n",
     "from fasthugs.learner import TransLearner\n",
-    "from fasthugs.data import TransformersTextBlock, TextGetter, get_splits"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from fasthugs.data import TransformersTextBlock, TextGetter, get_splits\n",
+    "\n",
     "from datasets import load_dataset, concatenate_datasets"
    ]
   },
@@ -427,6 +420,7 @@
     }
    ],
    "source": [
+    "#hide_output\n",
     "wandb.init(reinit=True, project=\"fasthugs\", entity=\"fastai_community\",\n",
     "           name=WANDB_NAME, group=GROUP, notes=NOTES, tags=TAGS, config=CONFIG);"
    ]
@@ -456,6 +450,7 @@
     }
    ],
    "source": [
+    "#hide_output\n",
     "model = AutoModelForSequenceClassification.from_pretrained(model_name)\n",
     "metrics = glue_metrics[task]\n",
     "learn = TransLearner(dls, model, metrics=metrics)"
@@ -955,6 +950,7 @@
     }
    ],
    "source": [
+    "#hide_output \n",
     "wandb.init(reinit=True, project=\"fasthugs\", entity=\"fastai_community\",\n",
     "           name=WANDB_NAME, group=GROUP, notes=NOTES, tags=TAGS, config=CONFIG);"
    ]
@@ -984,6 +980,7 @@
     }
    ],
    "source": [
+    "#hide_output\n",
     "model = AutoModelForSequenceClassification.from_pretrained(model_name)\n",
     "metrics = glue_metrics[task]\n",
     "learn = TransLearner(dls, model, metrics=metrics)"
@@ -1399,6 +1396,7 @@
     }
    ],
    "source": [
+    "#hide_output \n",
     "wandb.init(reinit=True, project=\"fasthugs\", entity=\"fastai_community\",\n",
     "           name=WANDB_NAME, group=GROUP, notes=NOTES, tags=TAGS, config=CONFIG);"
    ]
@@ -1428,6 +1426,7 @@
     }
    ],
    "source": [
+    "#hide_output\n",
     "model = AutoModelForSequenceClassification.from_pretrained(model_name)\n",
     "metrics = glue_metrics[task]\n",
     "learn = TransLearner(dls, model, metrics=metrics)"
@@ -1848,6 +1847,7 @@
     }
    ],
    "source": [
+    "#hide_output \n",
     "wandb.init(reinit=True, project=\"fasthugs\", entity=\"fastai_community\",\n",
     "           name=WANDB_NAME, group=GROUP, notes=NOTES, tags=TAGS, config=CONFIG);"
    ]
@@ -1877,6 +1877,7 @@
     }
    ],
    "source": [
+    "#hide_output\n",
     "model = AutoModelForSequenceClassification.from_pretrained(model_name, num_labels=1)\n",
     "metrics = glue_metrics[task]\n",
     "learn = TransLearner(dls, model, metrics=metrics)"
@@ -2297,6 +2298,7 @@
     }
    ],
    "source": [
+    "#hide_output \n",
     "wandb.init(reinit=True, project=\"fasthugs\", entity=\"fastai_community\",\n",
     "           name=WANDB_NAME, group=GROUP, notes=NOTES, tags=TAGS, config=CONFIG);"
    ]
@@ -2326,6 +2328,7 @@
     }
    ],
    "source": [
+    "#hide_output\n",
     "model = AutoModelForSequenceClassification.from_pretrained(model_name)\n",
     "metrics = glue_metrics[task]\n",
     "learn = TransLearner(dls, model, metrics=metrics)"
@@ -2770,6 +2773,7 @@
     }
    ],
    "source": [
+    "#hide_output \n",
     "wandb.init(reinit=True, project=\"fasthugs\", entity=\"fastai_community\",\n",
     "           name=WANDB_NAME, group=GROUP, notes=NOTES, tags=TAGS, config=CONFIG);"
    ]
@@ -2799,6 +2803,7 @@
     }
    ],
    "source": [
+    "#hide_output\n",
     "model = AutoModelForSequenceClassification.from_pretrained(model_name, num_labels=3)\n",
     "metrics = glue_metrics[task]\n",
     "learn = TransLearner(dls, model, metrics=metrics)"
@@ -3245,6 +3250,7 @@
     }
    ],
    "source": [
+    "#hide_output \n",
     "wandb.init(reinit=True, project=\"fasthugs\", entity=\"fastai_community\",\n",
     "           name=WANDB_NAME, group=GROUP, notes=NOTES, tags=TAGS, config=CONFIG);"
    ]
@@ -3274,6 +3280,7 @@
     }
    ],
    "source": [
+    "#hide_output\n",
     "model = AutoModelForSequenceClassification.from_pretrained(model_name)\n",
     "metrics = glue_metrics[task]\n",
     "learn = TransLearner(dls, model, metrics=metrics)"
@@ -3689,6 +3696,7 @@
     }
    ],
    "source": [
+    "#hide_output \n",
     "wandb.init(reinit=True, project=\"fasthugs\", entity=\"fastai_community\",\n",
     "           name=WANDB_NAME, group=GROUP, notes=NOTES, tags=TAGS, config=CONFIG);"
    ]
@@ -3718,6 +3726,7 @@
     }
    ],
    "source": [
+    "#hide_output\n",
     "model = AutoModelForSequenceClassification.from_pretrained(model_name)\n",
     "metrics = glue_metrics[task]\n",
     "learn = TransLearner(dls, model, metrics=metrics)"
@@ -4133,6 +4142,7 @@
     }
    ],
    "source": [
+    "#hide_output \n",
     "wandb.init(reinit=True, project=\"fasthugs\", entity=\"fastai_community\",\n",
     "           name=WANDB_NAME, group=GROUP, notes=NOTES, tags=TAGS, config=CONFIG);"
    ]
@@ -4162,6 +4172,7 @@
     }
    ],
    "source": [
+    "#hide_output\n",
     "model = AutoModelForSequenceClassification.from_pretrained(model_name)\n",
     "metrics = glue_metrics[task]\n",
     "learn = TransLearner(dls, model, metrics=metrics)"
