padbatch tfm, qa nb draft

--- a/nbs/01_learner.ipynb
+++ b/nbs/01_learner.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70fa0f6c",
+   "id": "893bf9e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2a0bdd8",
+   "id": "0ced3ee4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b12d68b7",
+   "id": "d10b5f66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fed3465a",
+   "id": "641f0b1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90eb6cbb",
+   "id": "f337d502",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,12 +55,13 @@
     "from inspect import signature\n",
     "from fasthugs.data import TransformersTextBlock\n",
     "\n",
-    "from transformers import AutoTokenizer, AutoConfig, AutoModelForSequenceClassification, BatchEncoding"
+    "from transformers import AutoTokenizer, AutoConfig, AutoModelForSequenceClassification, BatchEncoding\n",
+    "from transformers.modeling_outputs import QuestionAnsweringModelOutput"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "516e93b3",
+   "id": "4446fafa",
    "metadata": {},
    "source": [
     "# Learner for transformers"
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21999df0",
+   "id": "9b58abaf",
    "metadata": {},
    "source": [
     "## Parameter groups"
@@ -76,18 +77,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "358755c5",
+   "id": "504febf1",
    "metadata": {},
    "source": [
     "TODOs:\n",
-    "- [ ] exclude modules w/o params\n",
+    "- [x] exclude modules w/o params\n",
     "- [ ] add layerwise splitter for Transfomers"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9fff883",
+   "id": "87b9bc09",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,19 +100,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73650811",
+   "id": "ac1d3d41",
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
     "def default_splitter(model):\n",
-    "    groups = L(model.base_model.children()) + L(model.children())[1:]\n",
+    "    groups = L(model.base_model.children()) + L(m for m in list(model.children())[1:] if params(m))\n",
     "    return groups.map(params)"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c453365b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def layerwise_splitter(model):\n",
+    "    raise NotImplementedError('use default_splitter for now')"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "13a308f9",
+   "id": "b71cb17c",
    "metadata": {},
    "source": [
     "## TransLearner and utils"
@@ -120,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6dde821a",
+   "id": "d9531c37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22415c43",
+   "id": "ef9e9a56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87675e6b",
+   "id": "877c0deb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,15 +178,18 @@
     "        if 'loss' in self.pred:\n",
     "            self.learn.loss_grad = self.pred.loss\n",
     "            self.learn.loss = self.pred.loss.clone()\n",
-    "            self.learn.yb = (self.xb[0]['labels'], )\n",
+    "            if 'labels' in self.xb[0].keys():\n",
+    "                self.learn.yb = (self.xb[0]['labels'], )\n",
     "            self.learn.compute_loss = False\n",
-    "        self.learn.pred = self.pred.logits"
+    "        if isinstance(self.pred, QuestionAnsweringModelOutput):\n",
+    "            self.learn.pred = (self.pred.start_logits, self.pred.end_logits)\n",
+    "        else: self.learn.pred = self.pred.logits"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f99ee129",
+   "id": "50d87b2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "baa9b9e4",
+   "id": "af1a7951",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd0c673e",
+   "id": "cdeffcde",
    "metadata": {},
    "source": [
     "### Using TransLearner for sequence classification"
@@ -247,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85785605",
+   "id": "fd4dc84c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b6b9177",
+   "id": "1953bccb",
    "metadata": {},
    "outputs": [
     {
@@ -300,16 +315,16 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>0.473346</td>\n",
-       "      <td>0.343880</td>\n",
-       "      <td>0.865000</td>\n",
-       "      <td>00:22</td>\n",
+       "      <td>0.446150</td>\n",
+       "      <td>0.542738</td>\n",
+       "      <td>0.765000</td>\n",
+       "      <td>00:21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>0.261769</td>\n",
-       "      <td>0.364859</td>\n",
-       "      <td>0.875000</td>\n",
+       "      <td>0.288374</td>\n",
+       "      <td>0.300514</td>\n",
+       "      <td>0.895000</td>\n",
        "      <td>00:21</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -332,7 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86873bf0",
+   "id": "e4d865d0",
    "metadata": {},
    "source": [
     "## Fin"
@@ -341,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d93b9e27",
+   "id": "3587d9df",
    "metadata": {},
    "outputs": [
     {
@@ -352,6 +367,7 @@
       "Converted 01_learner.ipynb.\n",
       "Converted 10_examples.classification-imdb.ipynb.\n",
       "Converted 11_examples.mlm-imdb.ipynb.\n",
+      "Converted 12_examples.glue-benchmark.ipynb.\n",
       "Converted index.ipynb.\n"
      ]
     }
@@ -364,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73078ea3",
+   "id": "57547a11",
    "metadata": {},
    "outputs": [],
    "source": []
