--- a/nbs/12_examples.glue-benchmark.ipynb
+++ b/nbs/12_examples.glue-benchmark.ipynb
@@ -47,9 +47,7 @@
     "# hide\n",
     "import sys\n",
     "if 'google.colab' in sys.modules:\n",
-    "    !pip install -Uqq fastcore\n",
-    "    !pip install -Uqq --no-deps fastai\n",
-    "    !pip install -Uqq transformers datasets wandb\n",
+    "    !pip install -Uqq fastai transformers datasets wandb\n",
     "    !pip install git+git://github.com/aikindergarten/fasthugs.git"
    ]
   },
