--- a/nbs/12a_examples_glue_benchmark_sweep.ipynb
+++ b/nbs/12a_examples_glue_benchmark_sweep.ipynb
@@ -9,16 +9,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tue May  4 10:53:01 2021       \n",
+      "Tue May  4 22:01:45 2021       \n",
       "+-----------------------------------------------------------------------------+\n",
-      "| NVIDIA-SMI 465.19.01    Driver Version: 460.32.03    CUDA Version: 11.2     |\n",
+      "| NVIDIA-SMI 450.36.06    Driver Version: 450.36.06    CUDA Version: 11.0     |\n",
       "|-------------------------------+----------------------+----------------------+\n",
       "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
       "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
       "|                               |                      |               MIG M. |\n",
       "|===============================+======================+======================|\n",
-      "|   0  Tesla T4            Off  | 00000000:00:04.0 Off |                    0 |\n",
-      "| N/A   48C    P8    10W /  70W |      0MiB / 15109MiB |      0%      Default |\n",
+      "|   0  Quadro P5000        On   | 00000000:00:05.0 Off |                  Off |\n",
+      "| 26%   25C    P8     6W / 180W |      1MiB / 16278MiB |      0%      Default |\n",
       "|                               |                      |                  N/A |\n",
       "+-------------------------------+----------------------+----------------------+\n",
       "                                                                               \n",
@@ -83,6 +83,16 @@
     "\n",
     "import wandb\n",
     "import gc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%env WANDB_ENTITY=fastai_community\n",
+    "%env WANDB_PROJECT=glue-benchmark"
    ]
   },
   {
@@ -172,6 +182,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#collapse_input\n",
+    "def layerwise_splitter(model):\n",
+    "    emb = L(model.base_model.embeddings)\n",
+    "    layers = L(model.base_model.encoder.layer.children())\n",
+    "    clf = L(m for m in list(model.children())[1:] if params(m))\n",
+    "    groups = emb + layers + clf\n",
+    "    return groups.map(params)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -194,130 +219,10 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c8b04627ae63433598e1346b6c09613c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='Downloading', max=7777.0, style=ProgressStyle(description…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "594d57e21fa04b8d9666f2cb2ceb5ae5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='Downloading', max=4473.0, style=ProgressStyle(description…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Downloading and preparing dataset glue/sst2 (download: 7.09 MiB, generated: 4.81 MiB, post-processed: Unknown size, total: 11.90 MiB) to /root/.cache/huggingface/datasets/glue/sst2/1.0.0/dacbe3125aa31d7f70367a07a8a9e72a5a0bfeb5fc42e75c9db75b96da6053ad...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "53ac3ba792114dbe971a94dbf34c69a1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='Downloading', max=7439277.0, style=ProgressStyle(descript…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fb28b9902b81477381cd39c8eed97c6f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=1.0, bar_style='info', max=1.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "70b38afdaf6549ae8e790df7768d57ba",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=1.0, bar_style='info', max=1.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "60c82d0663014a0ca53be19196692213",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=1.0, bar_style='info', max=1.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\rDataset glue downloaded and prepared to /root/.cache/huggingface/datasets/glue/sst2/1.0.0/dacbe3125aa31d7f70367a07a8a9e72a5a0bfeb5fc42e75c9db75b96da6053ad. Subsequent calls will reuse this data.\n"
+      "Reusing dataset glue (/root/.cache/huggingface/datasets/glue/sst2/1.0.0/dacbe3125aa31d7f70367a07a8a9e72a5a0bfeb5fc42e75c9db75b96da6053ad)\n"
      ]
     }
    ],
@@ -393,41 +298,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  "
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5852291e134949609f1522503b45205d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='#0', max=34111.0, style=ProgressStyle(description_width='…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d7715ffd7e424886a431dd79b3c8ba31",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='#1', max=34110.0, style=ProgressStyle(description_width='…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "\n",
       "\n"
      ]
@@ -444,92 +314,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2a061b1496e447da8abb5e275ceca105",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='Downloading', max=480.0, style=ProgressStyle(description_…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4282f58e5f1648d9a2ea1958ea25ad1f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='Downloading', max=898823.0, style=ProgressStyle(descripti…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f0449c929830491abaa76151ad96b8c8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='Downloading', max=456318.0, style=ProgressStyle(descripti…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3f8e5659de404f009c78362865f22dbf",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='Downloading', max=1355863.0, style=ProgressStyle(descript…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dblock = DataBlock(blocks = [TransformersTextBlock(pretrained_model_name=model_name), CategoryBlock()],\n",
     "                   get_x=TextGetter(*glue_textfields[task]),\n",
@@ -546,8 +331,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 17.5 s, sys: 2.14 s, total: 19.6 s\n",
-      "Wall time: 25.4 s\n"
+      "CPU times: user 16.9 s, sys: 992 ms, total: 17.9 s\n",
+      "Wall time: 17.8 s\n"
      ]
     }
    ],
@@ -581,17 +366,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>imagine anyone managing to steal a movie not only from charismatic rising star jake gyllenhaal but also from accomplished oscar winners susan sarandon, dustin hoffman and holly hunter, yet newcomer ellen pompeo pulls off the feat with aplomb</td>\n",
+       "      <td>stopped thinking about how good it all was, and started doing nothing but reacting to it - feeling a part of its grand locations, thinking urgently as the protagonists struggled, feeling at the mercy of its inventiveness, gasping at its visual delights.</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>it's usually a bad sign when directors abandon their scripts and go where the moment takes them, but olympia, wash., based filmmakers anne de marcken and marilyn freeman did just that and it's what makes their project so interesting.</td>\n",
-       "      <td>1</td>\n",
+       "      <td>ozpetek offers an aids subtext, skims over the realities of gay sex, and presents yet another tired old vision of the gay community as an all-inclusive world where uptight, middle class bores like antonia can feel good about themselves.</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>sitting in the third row of the imax cinema at sydney's darling harbour, but i sometimes felt as though i was in the tiny two seater plane that carried the giant camera around australia, sweeping and gliding, banking and</td>\n",
+       "      <td>'s... worth the extra effort to see an artist, still committed to growth in his ninth decade, change while remaining true to his principles with a film whose very subject is, quite pointedly, about the peril of such efforts.</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -638,21 +423,6 @@
     "#hide_output \n",
     "wandb.init(reinit=True, project=\"fasthugs\", entity=\"fastai_community\",\n",
     "           name=WANDB_NAME, group=GROUP, notes=NOTES, tags=TAGS);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#collapse_input\n",
-    "def layerwise_splitter(model):\n",
-    "    emb = L(model.base_model.embeddings)\n",
-    "    layers = L(model.base_model.encoder.layer.children())\n",
-    "    clf = L(m for m in list(model.children())[1:] if params(m))\n",
-    "    groups = emb + layers + clf\n",
-    "    return groups.map(params)"
    ]
   },
   {
@@ -780,9 +550,7 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       ""
-      ],
+      "text/html": [],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
@@ -904,7 +672,26 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Failed to query for notebook name, you can set it manually with the WANDB_NOTEBOOK_NAME environment variable\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mfastai_community\u001b[0m (use `wandb login --relogin` to force relogin)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "wandb.login()"
    ]
@@ -916,17 +703,18 @@
    "outputs": [],
    "source": [
     "def train():\n",
-    "    run = wandb.init(); \n",
-    "    model = AutoModelForSequenceClassification.from_pretrained(model_name)\n",
-    "    metrics = glue_metrics[task]\n",
-    "    k = len(layerwise_splitter(model))\n",
-    "    if diff_lr: lr = slice(lr*diff_lr_decay_factor**k,lr)\n",
-    "    learn = TransLearner(dls, model, metrics=metrics, opt_func=opt_func, splitter=layerwise_splitter)\n",
-    "    learn.fit_one_cycle(n_epoch, lr, wd=wd, cbs=[WandbCallback(log_preds=False, log_model=False)])\n",
-    "    del learn\n",
-    "    gc.collect()\n",
-    "    torch.cuda.empty_cache()\n",
-    "    torch.cuda.synchronize()"
+    "    with wandb.init() as run:\n",
+    "        cfg = run.config\n",
+    "        model = AutoModelForSequenceClassification.from_pretrained(model_name, num_labels=glue_num_labels.get(task, 2))\n",
+    "        metrics = glue_metrics[task]\n",
+    "        k = len(layerwise_splitter(model))\n",
+    "        if cfg.diff_lr_decay_factor: lr = slice(cfg.lr*cfg.diff_lr_decay_factor**k,cfg.lr)\n",
+    "        learn = TransLearner(dls, model, metrics=metrics, opt_func=Adam, splitter=layerwise_splitter)\n",
+    "        learn.fit_one_cycle(n_epoch, cfg.lr, wd=cfg.wd, cbs=[WandbCallback(log_preds=False, log_model=False)])\n",
+    "        del learn\n",
+    "        gc.collect()\n",
+    "        torch.cuda.empty_cache()\n",
+    "        torch.cuda.synchronize()"
    ]
   },
   {
@@ -935,18 +723,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "metrics = glue_metrics[task]\n",
     "metric_to_monitor = metrics[0].name if isinstance(metrics[0], Metric) else metrics[0].__name__\n",
+    "sweep_name = f\"glue-{task}-sweep\"\n",
     "sweep_config = {\n",
-    "  \"name\": f\"glue-{task}-sweep\",\n",
+    "  \"name\": sweep_name,\n",
     "  \"method\": \"random\",\n",
     "  \"parameters\": {\n",
     "        \"lr\": {\"values\":[1e-5,2e-5,3e-5,5e-5, 1e-4, 3e-4]},\n",
     "        \"wd\":{\"values\":[0.,1e-2,5e-2]},\n",
-    "        \"opt_func\":{\"values\":[Adam, RAdam]},\n",
-    "        \"diff_lr\":{0., 0.9, 0.8, 0.7, 0.6}\n",
+    "        \"diff_lr_decay_factor\":{\"values\":[0., 0.9, 0.8, 0.7, 0.6]}\n",
     "    },\n",
     "  \"metric\":{\"goal\": \"maximise\", \"name\": metric_to_monitor},\n",
-    "  \"early_terminate\": {\"type\": \"hyperband\", \"s\": 2, \"eta\": 3, \"max_iter\": 60}\n",
+    "  \"early_terminate\": {\"type\": \"hyperband\", \"s\": 2, \"eta\": 3, \"max_iter\": 40}\n",
     "}"
    ]
   },
@@ -954,9 +743,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Create sweep with ID: dwio5fl2\n",
+      "Sweep URL: https://wandb.ai/fastai_community/uncategorized/sweeps/dwio5fl2\n"
+     ]
+    }
+   ],
    "source": [
-    "sweep_id = wandb.sweep(sweep_config, project=\"fasthugs\", entity=\"fastai_community\")"
+    "sweep_id = wandb.sweep(sweep_config, project='glue-benchmark', entity=\"fastai_community\")"
    ]
   },
   {
@@ -966,6 +764,15 @@
    "outputs": [],
    "source": [
     "wandb.agent(sweep_id, function=train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wandb.finish()"
    ]
   },
   {
@@ -1317,9 +1124,7 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       ""
-      ],
+      "text/html": [],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
@@ -1352,5 +1157,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 4
 }
